<resources>
    <string name="app_name">Share Car Ue</string>
    <string name="select_picture_title">Pick Image</string>
    <string name="action_settings">Cerrar Sesión</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="exit">¿Desea Salir de la Aplicación?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="salir">Salir</string>
    <string name="bienvenida">Bienvenido a la aplicación</string>
    <string name="controlCorreoLog">El correo no puede estar vacío</string>
    <string name="controlContrasenaLog">La contraseña no puede estar vacía</string>
    <string name="autentificacionFallida">Autentificación fallida</string>
    <string name="controlEmailSig">E-Mail incorrecto</string>
    <string name="controlUsuarioSig">Usuario incorrecto</string>
    <string name="controlContrasena1Sig">La contraseña no puede tener menos de 8 caracteres</string>
    <string name="controlContrasena2Sig">La contraseña tiene que ser alfanumerica y tener mayusculas y minusculas</string>
    <string name="terminos">Hay que aceptar los terminos de uso</string>
    <string name="correo">Correo:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login">Entrar</string>
    <string name="SignUp">Registrate</string>
    <string name="olvido">¿Olvidaste tu contraseña?</string>
    <string name="recordar">Recordar mis credenciales</string>
    <string name="hintContra">Introduzca su Contraseña</string>
    <string name="hintCorreo">Introduzca su Correo</string>
    <string name="usuario">Usuario:</string>
    <string name="hintUsu">Introduzca su usuario</string>
    <string name="or_n">El Origen no puede estar vacio</string>
    <string name="de_n">El Destino no puede estar vacio</string>
    <string name="da_t">La Fecha tiene que ser valida</string>
    <string name="ho_n">La Hora tiene que ser valida</string>
    <string name="pr_n">El Precio no puede estar vacio</string>
    <string name="ds_n">La Descripcion no puede estar vacia</string>
    <string name="as_tr">Debes tener algun asiento disponible</string>
    <string name="mytrips">Viajes</string>
    <string name="fail_trip">Failed to load Viaje.</string>
    <string name="fb_or">origen</string>
    <string name="fb_dest">destino</string>
    <string name="fb_dat">fecha</string>
    <string name="fb_ho">hora</string>
    <string name="fb_pr">precio</string>
    <string name="fb_pl">numeroplazas</string>
    <string name="name">nombre</string>
    <string name="user">usuario</string>
    <string name="full_trip">El viaje esta Completo</string>
    <string name="no_res">NO puedes reservar un viaje creado por ti</string>
    <string name="res_trip">Reservar Viaje</string>
    <string name="ins_pl">Introduzca las plazas deseadas</string>
    <string name="pub_trip">El publicador del viaje es: </string>
    <string name="or_trip">Origen Viaje: </string>
    <string name="des_trip">Destino Viaje: </string>
    <string name="br_car">Marca Coche: </string>
    <string name="dat_car">Año Coche: </string>
    <string name="do_it">Hecho</string>
    <string name="num_pla">Tienes que poner algun asiento para reservar</string>
    <string name="asi_ds">Debes tener algun asiento disponible</string>
    <string name="no_resTrip">No puedes reservas tantos asientos</string>
    <string name="imp">Importante</string>
    <string name="acep_trip">¿Acepta la Reserva de este viaje?</string>
    <string name="confirm">Confirmar</string>
    <string name="posts">posts</string>
    <string name="cancel">Cancel</string>
    <string name="cancelar">Cancelar</string>
    <string name="res">Reservas</string>
    <string name="cancel_op">Se ha cancelado la operación</string>
    <string name="rese_trip">Reserva Viaje</string>
    <string name="res_true">Se ha reservado el viaje.</string>
    <string name="ins_ronum">Please Enter Room Name !!!</string>
    <string name="UserCreate">UserCreate</string>
    <string name="room_name">room_name</string>
    <string name="user_name">user_name</string>
    <string name="del">Delete</string>
    <string name="err">Error</string>
    <string name="not_master">You are not room master. You can not delete room !!!</string>
    <string name="del_room">Delete Room Chat</string>
    <string name="this_us">Este es tu usuario: </string>
    <string name="ready">OK</string>
    <string name="asi_re">Introduzca asientos a reservar</string>
    <string name="busqueda">Búsqueda</string>
    <string name="search">Buscar</string>
    <string name="room_chat">Room Chat</string>
    <string name="add">Add</string>
    <string name="send">Send</string>




</resources>
