<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aja.proyectointegrado.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/StandarMargin"
                android:text="@string/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView"
                android:textSize="18sp"
                android:layout_marginLeft="12dp" />

            <EditText
                style="@style/StandarMargin"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hintCorreo"
                android:ems="10"
                android:id="@+id/etUsuario"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp" />

            <TextView
                style="@style/StandarMargin"
                android:text="@string/contrasena"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:id="@+id/textView2"
                android:layout_below="@+id/etUsuario"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:layout_marginLeft="11dp" />

            <EditText
                style="@style/StandarMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hintContra"
                android:ems="10"
                android:id="@+id/etContra"
                android:layout_below="@+id/textView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="7dp" />

            <CheckBox
                style="@style/StandarMargin"
                android:text="@string/recordar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:layout_below="@+id/etContra"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />

            <Button
                style="@style/StandarMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                android:onClick="login"
                android:background="@drawable/boton_estandar"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:text="@string/login" />

            <Button
                style="@style/StandarMargin"
                android:text="@string/SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSign"
                android:onClick="signup"
                android:background="@drawable/boton_estandar"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp" />

            <TextView
                style="@style/StandarMargin"
                android:text="@string/olvido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:onClick="showChangeLangDialog"
                android:layout_below="@+id/checkBox"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>


