<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aja.proyectointegrado.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                style="@style/StandarMargin"
                android:text="@string/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_marginBottom="17dp"
                android:layout_above="@+id/etUsuario"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18sp" />

            <EditText
                style="@style/StandarMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etUsuario"
                android:hint="@string/hintUsu"
                android:layout_marginBottom="17dp"
                android:layout_above="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="16sp"/>

            <TextView
                style="@style/StandarMargin"
                android:text="@string/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="17dp"
                android:textSize="18sp" />

            <EditText
                style="@style/StandarMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etEmail"
                android:hint="@string/hintCorreo"
                android:layout_marginBottom="17dp"
                android:layout_above="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="16sp"/>

            <TextView
                style="@style/StandarMargin"
                android:text="@string/contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_marginBottom="17dp"
                android:layout_above="@+id/etContra1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18sp" />

            <EditText
                style="@style/StandarMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etContra1"
                android:hint="@string/hintContra"
                android:layout_above="@+id/btnRegistro"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="16sp"/>

            <CheckBox
                style="@style/StandarMargin"
                android:text="@string/terminos"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:id="@+id/terminos"
                android:checked="false"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="18sp" />

            <Button

                style="@style/StandarMargin"
                android:text="Registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegistro"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="registro"
                android:background="@drawable/boton_estandar"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>